<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/change_email_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/change_email"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/change_password"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/change_avatar_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/change_avatar"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
</LinearLayout>