<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardMaxElevation="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/goal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="9dp"
            android:text="@string/goal_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/goal_complexity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/goal_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="8dp"
            android:drawablePadding="2dp"
            android:text="@string/goal_complexity" />

        <Button
            android:id="@+id/goal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"

            android:layout_alignParentEnd="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"

            android:layout_toEndOf="@+id/goal_complexity"
            android:drawablePadding="2dp"
            android:text="@string/goal_action_button_text" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>