<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity_add.ActivityAddFragment">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="228dp"
        android:layout_height="65dp"
        android:background="@color/white"
        android:progress="60"
        app:layout_constraintBottom_toTopOf="@+id/mealButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <ImageButton
        android:id="@+id/transportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_directions_car_100"
        app:layout_constraintBottom_toTopOf="@+id/plasticButton"
        app:layout_constraintEnd_toStartOf="@+id/mealButton"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/mealButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_free_breakfast_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageButton
        android:id="@+id/plasticButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_shopping_bag_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.575" />

    <Button
        android:id="@+id/averageTestButton"
        android:layout_width="109dp"
        android:layout_height="79dp"
        android:text="@string/get_average_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/plasticButton"
        app:layout_constraintTop_toBottomOf="@+id/mealButton"
        app:layout_constraintVertical_bias="0.262" />

    <TextView
        android:id="@+id/totalCarbonPrintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total_carbon_print"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="80dp"
        android:text="@string/watch_added"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plasticButton"
        app:layout_constraintVertical_bias="0.385" />

    <ImageButton
        android:id="@+id/transportAddedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/ic_baseline_directions_car_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plasticButton" />

    <ImageButton
        android:id="@+id/plasticAddedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/ic_baseline_shopping_bag_24"
        app:layout_constraintStart_toEndOf="@+id/transportAddedButton"
        app:layout_constraintTop_toBottomOf="@+id/plasticButton" />

    <ImageButton
        android:id="@+id/mealAddedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/ic_baseline_free_breakfast_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/plasticAddedButton"
        app:layout_constraintTop_toBottomOf="@+id/plasticButton" />

</androidx.constraintlayout.widget.ConstraintLayout>